Fix carousel flicker in mobile

--- a/src/sass/layout/_cases.sass
+++ b/src/sass/layout/_cases.sass
@@ -240,15 +240,12 @@
     +m
       margin: 0 -32px  
   .owl-stage-outer
-    overflow: visible
+    overflow: hidden
   .owl-item
-    padding: 0 16px 
-    opacity: 0
+    position: relative
+    z-index: 100
+    -webkit-backface-visibility: hidden 
     transition: opacity .25s
-    +d
-      padding: 0 12px 
-    +m
-      padding: 0
     &.active
       opacity: 1
   .owl-nav
